--- a/src/javascripts/components/navbar/navbar.scss
+++ b/src/javascripts/components/navbar/navbar.scss
@@ -13,7 +13,7 @@ nav {
   box-shadow: $box-shadow;
 
   .brand {
-    font-size: 30px;
+    @include default-font(30px);
     line-height: 56px;
   }
 
